manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "weatherapi-3e54"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "weatherapi-3e54"
  template:
    metadata:
      labels:
        app: "weatherapi-3e54"
    spec:
      containers:
        - name: "weatherapi-3e54"
          image: "weatherapiconntainer.azurecr.io/weatherapi"
          ports:
          - containerPort: 80
